auto_branch_pushes/yansfil/add-scroll-depth-event/ppluto-main/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ppluto-main # the same group belongs to the same ALB (https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/#group.name)
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443" # http 80 port redirects to https 443
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:912892869657:certificate/7cad03f5-41d0-41a7-9a3a-f77e58b77de0,arn:aws:acm:ap-northeast-2:912892869657:certificate/9c24bb1c-9247-4291-9a87-d181f49f9034,arn:aws:acm:ap-northeast-2:912892869657:certificate/5b2afc86-2c8e-4a7c-ba38-29281a1f04eb # certificate arn to allow https traffic
    alb.ingress.kubernetes.io/subnets: subnet-0e702042fef1214b0,subnet-0e2d06adbcc8e5ea0,subnet-0b5971ee8ec80ecd7 # same vpc subnetes in the k8s cluster
spec:
  rules:
    # monigpt.com
    - host: HOST_NAME_PLACEHOLDER_0
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 82
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 83
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 80

    # deadrabb.it
    - host: HOST_NAME_PLACEHOLDER_1
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 8002
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 82
